--- a/src/components/search_bar/style.css
+++ b/src/components/search_bar/style.css
@@ -1,4 +1,13 @@
+.row {
+  margin-bottom: 0px;
+}
 
-input[type="search"]::placeholder {
-  color: white;
+#search {
+  margin-bottom: 0px;
+}
+
+.no-float {
+  float: none !important;
+  margin-left: auto;
+  margin-right: auto;
 }
